--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: My sample book
 author: Carlos Cámara-Menoyo, James Tripp, Cagatay Turkay
-logo: logo.png
+logo: IM939_logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
