--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python = 3.10
+  - python = 3.10.8
+  - matplotlib
   - pandas
   - pip
   - jupyter-book
